qa environment values

--- a/greeting-config-qa.yml
+++ b/greeting-config-qa.yml
@@ -13,4 +13,4 @@ logging:
 greeting:
   displayFortune: true
 
-quoteServiceURL: http://quote-service-dev.cfapps.io/quote/qa
+quoteServiceURL: http://quote-service-qa.cfapps.io/quote
