qa environment values

--- a/greeting-config-qa.yml
+++ b/greeting-config-qa.yml
@@ -13,4 +13,9 @@ logging:
 greeting:
   displayFortune: true
 
+logging:
+  level:
+    io:
+      pivotal: INFO
+
 quoteServiceURL: http://quote-service-qa.cfapps.io/quote
